--- a/about.qmd
+++ b/about.qmd
@@ -2,4 +2,8 @@
 title: "Curriculum Vitae"
 ---
 
-CV goes here
+Here is my Academic CV:
+
+{{< pdf cv/master_cv.pdf width=100% height=800 image=cv/master_cv.png image_force=TRUE >}}
+
+If you are viewing on mobile, you can download a pdf version of my CV [here](cv/master_cv.pdf).
