yet another attempt

--- a/about.qmd
+++ b/about.qmd
@@ -6,4 +6,4 @@ Here is my Academic CV:
 
 {{< pdf cv/master_cv.pdf width=100% height=800 image=cv/master_cv.png >}}
 
-If you are viewing on mobile or your browser does not render pdfs, you can download a pdf version of my CV [here](docs/cv/master_cv.pdf).
+If you are viewing on mobile or your browser does not render pdfs, you can download a pdf version of my CV by clicking on its screenshot.
